crates/uitest/fixtures/ty_check/generic_arg_mismatch.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: crates/uitest/fixtures/ty_check/generic_arg_mismatch.fe
---
error[3-0016]: too many generic args; expected 1, given 2
  ┌─ generic_arg_mismatch.fe:7:11
  │
7 │ type O2 = Opt<i32, bool>
  │           ^^^^^^^^^^^^^^ too many generic args; expected 1, given 2

error[8-0029]: `None` is not found
   ┌─ generic_arg_mismatch.fe:10:27
   │
10 │     let o = Opt<i32, ()>::None
   │                           ^^^^ `None` is not found in `<invalid>`
